# poc_precommit

./: .pre-commit-config.yaml  README.md  pyproject.toml
app/: .pre-commit-config.yaml  pyproject.toml
app/app/: settings.py  urls.py  views.py
app/tests/: sample_test.py
